--- a/index.html
+++ b/index.html
@@ -232,6 +232,10 @@ function secToHMS(sec){
 function secToKg(sec){
   return Math.max(0,(sec/600)*(+kg10min.value||2.5));
 }
+function safeSecDiff(a, b){
+  const d = a - b;
+  return d > 0 ? d : 0;
+}
 
 function todayStartISO(){
   const d = new Date();
@@ -313,21 +317,44 @@ async function updateMonth(){
 }
 
 
-historyBtn.onclick=async()=>{
-  historyBox.style.display=historyBox.style.display==="none"?"block":"none";
-  historyTable.innerHTML="";
-  const price=+priceKg.value||6.2;
-  for(let i=0;i<14;i++){
-    const d1=new Date();d1.setDate(d1.getDate()-i);d1.setHours(0,0,0,0);
-    const d2=new Date(d1);d2.setDate(d2.getDate()+1);
-   const f = await fetchFeeds(`start=${localISO(d1)}&end=${localISO(d2)}&results=2000`);
+historyBtn.onclick = async () => {
+  historyBox.style.display =
+    historyBox.style.display === "none" ? "block" : "none";
 
-    if(f.length>1){
-      const kg=secToKg(f.at(-1).field8-f[0].field8);
-      historyTable.innerHTML+=`<tr><td>${d1.toLocaleDateString("cs-CZ")}</td><td>${kg.toFixed(0)}</td><td>${(kg*price).toFixed(0)}</td></tr>`;
+  historyTable.innerHTML = "";
+  const price = +priceKg.value || 6.2;
+
+  for (let i = 0; i < 14; i++) {
+    const d1 = new Date();
+    d1.setDate(d1.getDate() - i);
+    d1.setHours(0, 0, 0, 0);
+
+    const d2 = new Date(d1);
+    d2.setDate(d2.getDate() + 1);
+
+    let kg = 0;
+
+    const f = await fetchFeeds(
+      `start=${localISO(d1)}&end=${localISO(d2)}&results=1000`
+    );
+
+    if (f.length > 1) {
+      const sec = safeSecDiff(
+        f.at(-1).field8,
+        f[0].field8
+      );
+      kg = secToKg(sec);
     }
+
+    historyTable.innerHTML += `
+      <tr>
+        <td>${d1.toLocaleDateString("cs-CZ")}</td>
+        <td>${kg.toFixed(0)}</td>
+        <td>${(kg * price).toFixed(0)}</td>
+      </tr>`;
   }
 };
+
 
 monthHistoryBtn.onclick = async () => {
   monthHistoryBox.style.display =
