--- a/index.html
+++ b/index.html
@@ -236,6 +236,26 @@ function safeSecDiff(a, b){
   const d = a - b;
   return d > 0 ? d : 0;
 }
+async function getDayKg(date){
+  const d1 = new Date(date);
+  d1.setHours(0,0,0,0);
+
+  const d2 = new Date(d1);
+  d2.setDate(d2.getDate() + 1);
+
+  const f = await fetchFeeds(
+    `start=${localISO(d1)}&end=${localISO(d2)}&results=1000`
+  );
+
+  if (f.length < 2) return 0;
+
+  const sec = safeSecDiff(
+    f.at(-1).field8,
+    f[0].field8
+  );
+
+  return secToKg(sec);
+}
 
 function todayStartISO(){
   const d = new Date();
@@ -325,35 +345,20 @@ historyBtn.onclick = async () => {
   const price = +priceKg.value || 6.2;
 
   for (let i = 0; i < 14; i++) {
-    const d1 = new Date();
-    d1.setDate(d1.getDate() - i);
-    d1.setHours(0, 0, 0, 0);
+    const d = new Date();
+    d.setDate(d.getDate() - i);
 
-    const d2 = new Date(d1);
-    d2.setDate(d2.getDate() + 1);
-
-    let kg = 0;
-
-    const f = await fetchFeeds(
-      `start=${localISO(d1)}&end=${localISO(d2)}&results=1000`
-    );
-
-    if (f.length > 1) {
-      const sec = safeSecDiff(
-        f.at(-1).field8,
-        f[0].field8
-      );
-      kg = secToKg(sec);
-    }
+    const kg = await getDayKg(d);
 
     historyTable.innerHTML += `
       <tr>
-        <td>${d1.toLocaleDateString("cs-CZ")}</td>
+        <td>${d.toLocaleDateString("cs-CZ")}</td>
         <td>${kg.toFixed(0)}</td>
         <td>${(kg * price).toFixed(0)}</td>
       </tr>`;
   }
 };
+
 
 
 monthHistoryBtn.onclick = async () => {
@@ -373,22 +378,8 @@ monthHistoryBtn.onclick = async () => {
     const me = new Date(ms);
     me.setMonth(me.getMonth() + 1);
 
-    for (
-      let d = new Date(ms);
-      d < me;
-      d.setDate(d.getDate() + 1)
-    ) {
-      const d1 = new Date(d);
-      const d2 = new Date(d); d2.setDate(d2.getDate() + 1);
-
-      const f = await fetchFeeds(
-        `start=${localISO(d1)}&end=${localISO(d2)}&results=1000`
-      );
-
-      if (f.length > 1) {
-        const sec = f.at(-1).field8 - f[0].field8;
-        if (sec > 0) monthKg += secToKg(sec);
-      }
+    for (let d = new Date(ms); d < me; d.setDate(d.getDate() + 1)) {
+      monthKg += await getDayKg(d);
     }
 
     monthHistoryTable.innerHTML += `
@@ -407,24 +398,29 @@ totalHistoryBtn.onclick = async () => {
     totalHistoryBox.style.display === "none" ? "block" : "none";
 
   totalHistoryTable.innerHTML = "";
-
   const price = +priceKg.value || 6.2;
 
-  const f = await fetchFeeds("results=8000");
-  if (f.length < 2) return;
+  let totalKg = 0;
 
-  const sec = f.at(-1).field8 - f[0].field8;
-  const kg = secToKg(sec);
-  const cost = kg * price;
+  // OD KDY CHCEŠ POČÍTAT (UPRAV SI)
+  const start = new Date("2024-01-01");
+  start.setHours(0,0,0,0);
+
+  const today = new Date();
+  today.setHours(0,0,0,0);
+
+  for (let d = new Date(start); d <= today; d.setDate(d.getDate() + 1)) {
+    totalKg += await getDayKg(d);
+  }
 
   totalHistoryTable.innerHTML = `
     <tr>
-      <td>Celé období (${new Date(f[0].created_at).toLocaleDateString("cs-CZ")} – ${new Date(f.at(-1).created_at).toLocaleDateString("cs-CZ")})</td>
-      <td>${kg.toFixed(1)}</td>
-      <td>${cost.toFixed(0)}</td>
-    </tr>
-  `;
+      <td>${start.toLocaleDateString("cs-CZ")} – ${today.toLocaleDateString("cs-CZ")}</td>
+      <td>${totalKg.toFixed(0)}</td>
+      <td>${(totalKg * price).toFixed(0)}</td>
+    </tr>`;
 };
+
 
 kg10min.oninput=()=>{localStorage.kg10min=kg10min.value;updateHour();updateDay();updateMonth();}
 priceKg.oninput=()=>{localStorage.priceKg=priceKg.value;updateDay();updateMonth();}
