--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@ footer img:hover{
 
 <script>
 const CHANNEL = 231269;
+const DAY_CHANNEL = 3238281; // denní součty v kg
 const ENERGY = 4.8;
 const EFF = 0.75;
 
